[package]
name = "rs-mlbb-redeem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
reqwest = { version = "0.12.3", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = { version = "1" }
